# CPP_FWI-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CMakeLists.txt  CMakeLists_simple.txt  Dockerfile  GIT_QUICKSTART.md  QUICKSTART.md  README.md  build_agent_project.sh  compose.yaml  key_step  setup.sh  setup_agent_env_grpc151.sh  start.sh  stop.sh  worker_launch_bootstrap.py  worker_launch_control.py
a2a/: CMakeLists.txt
a2a/include/a2a/client/: a2a_client.hpp  card_resolver.hpp
a2a/include/a2a/core/: a2a_methods.hpp  error_code.hpp  exception.hpp  http_client.hpp  jsonrpc_request.hpp  jsonrpc_response.hpp  types.hpp
a2a/include/a2a/examples/: agent_registry.hpp  http_server.hpp  llm_client.hpp  llm_url_policy.hpp  qwen_client.hpp  redis_task_store.hpp  registry_client.hpp
a2a/include/a2a/models/: a2a_response.hpp  agent_card.hpp  agent_message.hpp  agent_task.hpp  artifact.hpp  message_part.hpp  message_send_params.hpp  task_status.hpp
a2a/include/a2a/server/: memory_task_store.hpp  task_manager.hpp  task_store.hpp
a2a/src/client/: a2a_client.cpp  card_resolver.cpp
a2a/src/core/: exception.cpp  http_client.cpp  jsonrpc_request.cpp  jsonrpc_response.cpp
a2a/src/examples/: redis_task_store.cpp
a2a/src/models/: agent_card.cpp  agent_message.cpp  agent_task.cpp  artifact.cpp  message_part.cpp  message_send_params.cpp  task_status.cpp
a2a/src/server/: memory_task_store.cpp  task_manager.cpp
a2a_adapter/: CMakeLists.txt
a2a_adapter/include/agent_rpc/a2a_adapter/: a2a_adapter.h  a2a_config.h  a2a_metrics.h  error_mapper.h  request_adapter.h  response_adapter.h  retry_policy.h  task_manager_wrapper.h
a2a_adapter/src/: a2a_adapter.cpp  a2a_metrics.cpp  error_mapper.cpp  request_adapter.cpp  response_adapter.cpp  task_manager_wrapper.cpp
ai_interface/: CMakeLists.txt
ai_interface/include/agent_rpc/ai/: ai_interface.h
ai_interface/src/: ai_interface.cpp
client/: CMakeLists.txt
client/include/agent_rpc/client/: ai_query_client.h  rpc_client.h
client/src/: ai_query_client.cpp  grpc_ai_client.cpp  main.cpp  rpc_client.cpp
common/: CMakeLists.txt
common/include/agent_rpc/common/: circuit_breaker.h  load_balancer.h  logger.h  message_converter.h  metrics.h  redis_cli.h  rpc_framework.h  serializer.h  types.h
common/src/: circuit_breaker.cpp  load_balancer.cpp  logger.cpp  message_converter.cpp  metrics.cpp  serializer.cpp
deploy/: README.md
examples/ai_orchestrator/: CMakeLists.txt  ai_client.cpp  api_key_env.hpp  client_main.cpp  code_agent_main.cpp  code_agent_tools.cpp  code_agent_tools.hpp  experiment_planner_agent_main.cpp  fwi_teaching_agent_main.cpp  fwi_theory_agent_main.cpp  general_research_agent_main.cpp  llm_runtime_config.h  math_agent_main.cpp  orchestrator_main.cpp  registry_server_main.cpp  specialist_context.h  start_system.sh  stop_system.sh  view_logs.sh  watchdog.sh
mcp/examples/: CMakeLists.txt  ai_query_client.cpp  client_example.cpp  rpc_mcp_integration_test.cpp  serialization_example.cpp  server_example.cpp
mcp/examples/ai_orchestrator/: CMakeLists.txt  README.md  client_main.cpp  fwi_teaching_agent_main.cpp  fwi_theory_agent_main.cpp  general_research_agent_main.cpp  math_agent_main.cpp  orchestrator_main.cpp  registry_server_main.cpp  start_system.sh  stop_system.sh
mcp/examples/grpc_ai_demo/: CMakeLists.txt  grpc_client_main.cpp  grpc_server_main.cpp  start_server.sh
mcp_server_integrated/plugins/fwi-metadata/: CMakeLists.txt  FWIMetadata.cpp
mcp_server_integrated/plugins/fwi-runner/: CMakeLists.txt  FWIRunner.cpp  FWIRunnerTest.cpp
orchestrator/: CMakeLists.txt
orchestrator/src/: agent_router.cpp  context_window.cpp  memory_manager.cpp
proto/: CMakeLists.txt  CMakeLists_simple.txt  agent_service.proto  ai_query.proto  common.proto
registry/: CMakeLists.txt
registry/src/: service_registry.cpp
research/: CMakeLists.txt
research/src/: algorithm_card.cpp  algorithm_listing_tool.cpp  algorithm_registry.cpp  approved_template_run_packet.cpp  dry_run_backend.cpp  experiment_spec.cpp  internal_sanity_runner.cpp  job_backend.cpp  job_spec.cpp  lab_code_adapter.cpp  planner_answer.cpp  planner_context.cpp  research_knowledge.cpp  safe_operations.cpp  server_job.cpp  single_server_backend.cpp  single_server_lifecycle.cpp  workspace_planner.cpp
server/: CMakeLists.txt
server/src/: agent_service.cpp  ai_query_service.cpp  http_bridge.cpp  main.cpp  rpc_server.cpp
tests/: CMakeLists.txt  check_executable.cmake  check_web_branding.cmake  test_a2a_integration.cpp  test_adapter_properties.cpp  test_agent_communication.cpp  test_agent_router_properties.cpp  test_ai_query_integration.cpp  test_algorithm_card.cpp  test_algorithm_registry.cpp  test_approved_template_run_packet.cpp  test_code_agent_registration.cpp  test_code_agent_tools.cpp  test_codex_project_launcher.sh  test_context_window.cpp  test_embedding_server.py  test_experiment_planner_registration.cpp  test_experiment_spec.cpp  test_fwi_knowledge_base.cpp  test_fwi_tool_routing.cpp  test_internal_sanity_runner.cpp  test_lab_code_adapter.cpp  test_llm_runtime_config.cpp  test_mcp_integration.cpp  test_planner_answer.cpp  test_planner_context.cpp  test_project_continuity_contract.sh  test_proto_roundtrip.cpp  test_rag_mcp_properties.cpp  test_research_knowledge.cpp  test_rpc_framework.cpp  test_runtime_secret_isolation.sh  test_safe_operations.cpp  test_scientific_runtime_contracts.py  test_scientific_runtime_dag_data_binding.py  test_scientific_runtime_dag_execution_store.py  test_scientific_runtime_dag_input_binding_store.py  test_scientific_runtime_dag_node_cache.py  test_scientific_runtime_dag_runtime_scheduler.py  test_scientific_runtime_dag_scheduler.py  (+19 more)
tests/fwi_worker/: __init__.py  test_acquisition.py  test_checkpoint.py  test_config_model_io.py  test_deepwave_smoke.py  test_plots_metrics.py  test_state_artifacts.py  test_worker_failure.py
tests/fwi_worker/fixtures/: homogeneous_cpu.json  homogeneous_cuda.json  marmousi_forward_cpu.json  marmousi_forward_cuda.json  marmousi_fwi_demo_cuda.json  marmousi_fwi_smoke_cuda.json
(+235 files in other folders)
